--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ toy = { git = "https://github.com/manpat/toy-rs.git" }
 lewton = "0.10.*"
 thiserror = "1.0"
 bitflags = "1.2.*"
+slotmap = "1.0.*"
 
 [build-dependencies]
 gl_generator = "0.14.0"
